--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "^10.1.1",
