--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,3 @@
-<<<<<<< HEAD
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
-
-/coverage
-
-/.next/
-/out/
-
-/build
-
-.DS_Store
-*.pem
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-.env*.local
-
-.vercel
-
-=======
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -55,13 +28,13 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# env files
 .env*
+.env*.local
 
 # vercel
 .vercel
 
 # typescript
->>>>>>> init
 *.tsbuildinfo
 next-env.d.ts
