Redux configured + appStateSlice imported

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@react-three/rapier": "^2.1.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "@types/three": "^0.175.0",
     "gsap": "^3.12.7",
     "next": "15.2.4",
@@ -23,6 +24,7 @@
     "postprocessing": "^6.37.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "sass": "^1.86.3",
     "three": "^0.175.0"
   },
