--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-intl": "^4.0.2",
     "postprocessing": "^6.37.2",
     "react": "^19.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
