--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,14 +20,14 @@
     ],
     "baseUrl": "src",
     "paths": {
-      "@/*": ["./*"],
+      "@/*": ["./*"]
     },
     "removeComments": true,
     "sourceMap": true,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "noImplicitReturns": true,
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
