--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/rapier": "^2.1.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@types/three": "^0.175.0",
+    "animejs": "^3.2.2",
     "gsap": "^3.12.7",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
