--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "^10.1.1",
     "prettier": "^3.5.3",
+    "raw-loader": "^4.0.2",
     "rimraf": "^6.0.1",
     "typescript": "^5"
   }
