--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     "noImplicitReturns": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ],
   "exclude": ["node_modules"]
 }
