--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^3.12.7",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
+    "pixi.js": "^8.9.1",
     "postprocessing": "^6.37.2",
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
@@ -36,6 +37,7 @@
     "@next/bundle-analyzer": "^15.2.4",
     "@types/animejs": "^3.1.13",
     "@types/node": "^20.17.30",
+    "@types/pixi.js": "^5.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
