--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/three": "^0.175.0",
     "animejs": "^3.2.2",
     "gsap": "^3.12.7",
+    "moment": "^2.30.1",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
     "pixi.js": "^8.9.1",
